tenzir/tests/exec/expr/ufcs_error.tql
// error
from {
  x: "abc".starts_with(),
  y: starts_with("abc"),
}
